# MasterDegree

./: README.md
embedded-systems-design-tlm-virtual-platform/src/systemc-tlm/: CMakeLists.txt
embedded-systems-design-tlm-virtual-platform/src/systemc-tlm/AT4/: CMakeLists.txt
embedded-systems-design-tlm-virtual-platform/src/systemc-tlm/AT4/src/: main_multiplier_AT4.cpp  multiplier_AT4.cpp  multiplier_AT4_testbench.cpp
embedded-systems-design-tlm-virtual-platform/src/systemc-tlm/LT/: CMakeLists.txt
embedded-systems-design-tlm-virtual-platform/src/systemc-tlm/LT/include/: multiplier_LT.h
embedded-systems-design-tlm-virtual-platform/src/systemc-tlm/LT/src/: main_multiplier_LT.cpp  multiplier_LT.cpp  multiplier_LT_testbench.cpp
embedded-systems-design-tlm-virtual-platform/src/systemc-tlm/RTL/: CMakeLists.txt
embedded-systems-design-tlm-virtual-platform/src/systemc-tlm/RTL/include/: multiplier_RTL.h  multiplier_RTL_testbench.h
embedded-systems-design-tlm-virtual-platform/src/systemc-tlm/RTL/src/: main_multiplier_RTL.cpp  multiplier_RTL.cpp  multiplier_RTL_testbench.cpp
embedded-systems-design-tlm-virtual-platform/src/systemc-tlm/UT/: CMakeLists.txt
embedded-systems-design-tlm-virtual-platform/src/systemc-tlm/UT/src/: main_multiplier_UT.cpp  multiplier_UT.cpp  multiplier_UT_testbench.cpp
embedded-systems-design-tlm-virtual-platform/src/virtual-platform/application/inc/: routines.h
embedded-systems-design-tlm-virtual-platform/src/virtual-platform/application/src/: main.c  routines.c
embedded-systems-design-tlm-virtual-platform/src/virtual-platform/platform/: tb.v
embedded-systems-design-tlm-virtual-platform/src/virtual-platform/platform/multiplierIEEE754_verilog/: multiplierIEEE754.v  multiplierIEEE754_apb_wrapper.v
embedded-systems-design-tlm-virtual-platform/src/virtual-platform/platform/multiplierIEEE754_vhdl/: multiplierIEEE754.vhd  multiplierIEEE754_apb_wrapper.vhd
embedded-systems-design-verilog-vhdl/src/cpp/: multiplierIEEE754_float_algorithmic.cpp  multiplierIEEE754_float_systemc.cpp  multiplierIEEE754_fsmd_systemc.cpp
embedded-systems-design-verilog-vhdl/src/systemc/: CMakeLists.txt  test_list.txt
embedded-systems-design-verilog-vhdl/src/systemc/include/: constants.h  multiplierIEEE754_float.h  multiplierIEEE754_fsmd.h  tb.h  tl.h
embedded-systems-design-verilog-vhdl/src/systemc/src/: main_first_assignment.cpp  multiplierIEEE754_float.cpp  multiplierIEEE754_fsmd.cpp  tb.cpp  tl.cpp
embedded-systems-design-verilog-vhdl/src/vhdl-verilog/: multiplierIEEE754.vhd  tb.v  tl.vhd
